fix dark mode css

--- a/css/taskOverlay.css
+++ b/css/taskOverlay.css
@@ -107,7 +107,7 @@ fill: var(--neutral);
   left: 0;
   width: 100%;
   height: 100%;
-  background-color: var(--primary-4);
+  background-color: var(--neutral);
   white-space: nowrap;
   overflow: auto;
   opacity: 1;
